# example-aya-restapi

./: Cargo.toml  README.md
example-restapi/: Cargo.toml
example-restapi-common/: Cargo.toml
example-restapi-ebpf/: Cargo.toml
example-restapi-ebpf/src/: main.rs
example-restapi/src/: error.rs  main.rs
example-restapi/src/controllers/: blocklist.rs
example-restapi/src/models/: ip.rs
xtask/src/: build_ebpf.rs  run.rs
